# LUCAS-IC-PC

./: CMakeLists.txt  README  README.md  package.xml
bash/: amcl_geom.sh  amcltest.sh  controle.sh  killeverything.sh  launchgazebo.sh  launchrviz.sh  record.sh
launch/: amcl_geom.launch  corredor_geom.launch  departamento.launch  husky_departamento.launch  husky_geom.launch  husky_playpen.launch  husky_rviz.launch  spawn_husky.launch
maps/: map_geom.yaml
models/: corredor_geom
models/corredor/: corredor.config  corredor.sdf
models/corredor/meshes/: dae.rar
scripts/: gazeboplugin.cpp  rviz_config1.rviz  teste.cc
worlds/: corredor_geom.world  departamento.world
