<?xml version="1.0"?>
<package format="2">
  <name>catkin_ic</name>
  <version>0.0.0</version>
  <description>Pacote criado durante o desenvolvimento da iniciação científica sob a orientação do docente Paulo César Farias, do Departamento de Engenharia Elétrica e de Computação da Escola Politécnica da UFBA </description>
  <maintainer email="falcao.lucas@ufba.br">Lucas Falcão</maintainer>  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>

  
  <export>
  <gazebo_ros plugin_path="~/devel/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
